# oneclickbrm

./: .gitignore  Cargo.toml
heartbeat-client/: Cargo.toml
heartbeat-client/src/: main.rs
heartbeat-client/templates/: client_blocked.html  client_checking.html  client_dashboard.html  client_login.html
heartbeat-server/: Cargo.toml
heartbeat-server/src/: auth.rs  db.rs  main.rs
heartbeat-server/templates/: register.html  server_dashboard.html
scripts/: common.sh  restart.sh  run_demo.sh  start.sh  stop.sh
scripts/release/: build-client-linux-docker.sh  build-client-linux.sh  build-client-macos.sh  build-client-windows.ps1  build-clients-owner.sh  bump-version.sh  lib.sh
