[package]
name = "heartbeat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
